Don't try to move non-tabbed windows' buttons.

unit_tests/FramedBrowserWindowTest.WindowWidgetLocation was failing on
10.13. It turns out that the button positioning code produces the wrong
results on 10.13 (see bug for details), but only affected the test
because at some point window buttons started ignoring frame changes in
NSViewFrameDidChangeNotification handlers, which this code does.

The constants were 1pt off from the stock positions, and crbug.com/24539
suggests that they matched in older macOS. Since users already see the
buttons where AppKit puts them instead of where these constants would
put them, this CL:

- Changes the constants which the test checks to match AppKit.
- Stops trying to position non-tabbed windows' buttons.

Bug: 749186
Change-Id: I54a29659ba85b4e14ebd0fcd5eab47cd88071a9c
Reviewed-on: https://chromium-review.googlesource.com/602370
Reviewed-by: Robert Sesek <rsesek@chromium.org>
Commit-Queue: Sidney San Martín <sdy@chromium.org>
Cr-Commit-Position: refs/heads/master@{#492049}
Former-commit-id: 4681197f97a2e4fedd7e160563b888f71c2adc17